2007-07-13  Akim Demaille  <demaille@gostai.com>

	* shared-ptr.hh, shared-ptr.hxx (make_shared_ptr): New.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Simplify/improve deref
	* deref.hxx: Remove useless this->.
	Don't dump core on null pointers.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	libport::pair
	* pair.hh, pair.hxx: New.
	* README, libport.mk: Adjust.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	Add contract, deref, and separator.
	* libport/contract.cc, libport/contract.hh, libport/deref.cc,
	* libport/deref.hh, libport/deref.hxx, libport/separator.hh,
	* libport/separator.hxx, libport/tests/test-deref.cc,
	* libport/tests/test-separator.cc:
	New.
	* libport/libport-sources.mk, libport/libport.mk, libport/README,
	* libport/tests/Makefile.am:
	Update.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	libport.la
	* libport/libport.mk (noinst_LTLIBRARIES): Build libport.la.
	* libport/tests/Makefile.am: Use it.
	* libport/libport-sources.mk (libport_la): New.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Fixes
	* libport/containers.hh: Formatting changes.
	* libport/fwd.hh: Don't try to fwddecl hash.
	Fwddecl Symbol.
	* libport/hash.hh: Be ready to hash on Symbols.
	* libport/indent.cc: Use cassert.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	libport::indent
	* hash.hh: Formatting changes.
	* indent.cc, indent.hh: New.
	* README, fwd.hh, libport.mk, libport-sources.mk: Update.
	* tests/test-indent.cc: New.
	* tests/Makefile.am: Adjust.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Ref couted pointer on top of boost
	* shared-ref.hh, shared-ref.hxx: New.

2007-07-06  Akim Demaille  <demaille@gostai.com>

	Make hash table simpler to use
	* hash.hh: Don't define libport::hash_map_type, just use
	using to import hash_map into libport.

2007-05-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add missing include.
	* network.h: Incude our own unistd.h.

2007-05-25  mefyl  <mefyl@lrde.epita.fr>
