@@ -1,0 +1,9 @@
+include $(top_srcdir)/build-aux/init.mk
+
+# libort.mk define SVN_EXTERNALS for sake of top-level Makefile.am
+# that include it.  But it's old fashion, and eventually everybody
+# should rather use this Makefile.am.  Then we will be able to remove
+# all the SVN_EXTERNALS fuss.
+SVN_EXTERNALS =
+include libport.mk
+
